@@ -19,8 +19,6 @@
  */
 package org.zaproxy.addon.exim;
 
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import javax.swing.JMenu;
 import org.parosproxy.paros.Constant;
@@ -37,6 +35,7 @@ import org.zaproxy.addon.commonlib.ui.ZapSortedMenu;
 import org.zaproxy.addon.exim.har.MenuImportHar;
 import org.zaproxy.addon.exim.har.PopupMenuItemSaveHarMessage;
 import org.zaproxy.addon.exim.log.MenuItemImportLogs;
+import org.zaproxy.addon.exim.pcap.MenuItemImportPcap;
 import org.zaproxy.addon.exim.urls.MenuItemImportUrls;
 
 public class ExtensionExim extends ExtensionAdaptor {
@@ -45,7 +44,7 @@ public class ExtensionExim extends ExtensionAdaptor {
     public static final String EXIM_OUTPUT_ERROR = "exim.output.error";
     private static final String NAME = "ExtensionExim";
     private static final List<Class<? extends Extension>> DEPENDENCIES =
-            Collections.unmodifiableList(Arrays.asList(ExtensionCommonlib.class));
+            List.of(ExtensionCommonlib.class);
 
     private JMenu menuExport;
 
@@ -96,6 +95,7 @@ public class ExtensionExim extends ExtensionAdaptor {
             extensionHook.getHookMenu().addImportMenuItem(new MenuImportHar());
             extensionHook.getHookMenu().addImportMenuItem(new MenuItemImportUrls());
             extensionHook.getHookMenu().addImportMenuItem(new MenuItemImportLogs());
+            extensionHook.getHookMenu().addImportMenuItem(new MenuItemImportPcap());
         }
         extensionHook.addApiImplementor(new ImportExportApi());
     }
